# Coursework_M1

./: .gitignore  M1_CW_Q1_Q2.ipynb  M1_CW_Q3.ipynb  M1_CW_Q4.ipynb  M1_CW_Q5.ipynb  ML_MNIST_1.ipynb  ML_MNIST_2.ipynb  ML_MNIST_3.ipynb  ML_MNIST_4.ipynb  README.md  pyproject.toml  requirements.txt
Results/: Logistic_regression_combined.keras  Logistic_regression_sequential.keras  mnist_double_best_model_training_history.json
